<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/lightsteelblue">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadorab"
            android:id="@+id/tv_uno"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/tv_pantalla"
            android:textSize="40sp"
            android:background="@color/whitesmoke"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:text="@string/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_reset"
                android:textColor="@color/white"
                android:background="@color/mediumblue"
                android:textSize="20sp"/>

        <Button
                android:text="@string/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_clear"
                android:textColor="@color/white"
                android:background="@color/darkolivegreen"
                android:textSize="20sp"/>
        <Button
                android:text="@string/ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_ans"
                android:textColor="@color/white"
                android:background="@color/darkgoldenrod"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/siete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_siete"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/ocho"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_ocho"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/nueve"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_nueve"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/mas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_mas"
                    android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/cuatro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_cuatro"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/cinco"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_cinco"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/seis"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_seis"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/menos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_menos"
                    android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/uno"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_uno"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/dos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_dos"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/tres"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_tres"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/por"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_por"
                    android:textSize="35sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/punto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_punto"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/cero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_cero"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/igual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_igual"
                    android:textSize="40sp"/>
            <Button
                    android:text="@string/dividido"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_dividido"
                    android:textSize="40sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>